fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ header h5 {
   /* margin-top: 10vh; */
   display: flex;
   border-bottom: white 2px solid;
-  align-items: baseline;
+  align-items: end;
   justify-content: center;
   gap: 8px;
 }
@@ -69,12 +69,11 @@ header h5 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid white;
 }
 .dinnerbox img {
   width: 100%;
 }
-.dinnerbox h1{
+.dinnerbox h1 {
   color: rgb(109, 67, 11);
   margin-bottom: 1vh;
   font-size: 15px;
@@ -82,7 +81,7 @@ header h5 {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
-.dinnerbox p{
+.dinnerbox p {
   color: white;
   font-size: 10px;
   font-weight: 100px;
